--- a/src/styles.scss
+++ b/src/styles.scss
@@ -178,6 +178,8 @@ mat-dialog-container{
   --queue: linear-gradient(#181818, #000);
   --playlist: linear-gradient(#212121, #000);
   --player: #090909;
+  --gradient-45: linear-gradient(135deg, var(--liked) , #b6b6b6);
+  --liked: #501970;
   /*--main-color: #fa1a1a;
   --sidenav-width: 250px;
   --header-height: 65px;
