--- a/src/app/core/sidenav/sidenav.component.scss
+++ b/src/app/core/sidenav/sidenav.component.scss
@@ -8,7 +8,12 @@
     .top{
 
     }
+
+    .padding-player{
+      padding-bottom: 100px;
+    }
     .bottom{
+      transition: .5s ease-in-out;
       .copyright{
         display: flex;
         flex-direction: row;
@@ -72,13 +77,16 @@
       }
     }
   }
+  .padding-player{
+    padding-bottom: 100px;
+    transition: .5s ease-in-out;
+  }
   .main-content{
     min-height: 100vh;
     height: auto;
     color: var(--primary-text);
     background: var(--black);
     padding-top: 60px;
-    padding-bottom: 100px;
   }
 }
 .playlists{
