--- a/src/app/user/liked/liked.component.html
+++ b/src/app/user/liked/liked.component.html
@@ -1,29 +1,44 @@
 
 @if (loaded) {
   <div class="liked">
-    <!--  <input type="text" placeholder="Filter liked tracks by title, artists and albums" (input)="filterLiked(input.value)" #input>-->
-    @if (likedTracks.length) {
-      <h1>Liked tracks</h1>
-      <!--<ng-container *ngIf="filteredTracks.length > 0">
-      <app-track-table [tracks]="filteredTracks" [from]="fromInfo"></app-track-table>
-    </ng-container>-->
-    <!--<ng-container *ngIf="filteredTracks.length == 0 && !input.value.length">-->
-    <app-track-table [tracks]="likedTracks" [from]="fromInfo"></app-track-table>
-    <div class="loading">
-      @if (loading) {
-        <mat-progress-spinner diameter="40" mode="indeterminate"></mat-progress-spinner>
+    <div class="top">
+      <div class="image">
+        <mat-icon>favorite_outline</mat-icon>
+      </div>
+      <div class="info">
+        <p>Playlist</p>
+        <h2>Liked tracks</h2>
+        <div class="details">
+          <p>{{(_userService.user$ | async)?.email}}</p>
+          <app-divider></app-divider>
+          <p>{{likedTracks.length ? likedTracks.length : 0}} tracks</p>
+        </div>
+      </div>
+    </div>
+    <div class="bottom">
+      <!--  <input type="text" placeholder="Filter liked tracks by title, artists and albums" (input)="filterLiked(input.value)" #input>-->
+      @if (likedTracks.length) {
+        <!--<ng-container *ngIf="filteredTracks.length > 0">
+        <app-track-table [tracks]="filteredTracks" [from]="fromInfo"></app-track-table>
+      </ng-container>-->
+          <!--<ng-container *ngIf="filteredTracks.length == 0 && !input.value.length">-->
+        <app-track-table [tracks]="likedTracks" [from]="fromInfo"></app-track-table>
+        <div class="loading">
+          @if (loading) {
+            <mat-progress-spinner diameter="40" mode="indeterminate"></mat-progress-spinner>
+          }
+        </div>
+        <!--</ng-container>-->
+          <!--<ng-container *ngIf="!filteredTracks.length && input.value.length">
+          <app-no-results></app-no-results>
+        </ng-container>-->
+      } @else {
+        <div class="no-liked-tracks">
+          <mat-icon>favorite</mat-icon>
+          <p>Start by tapping the heart icon on your favorite songs to create your personal playlist.</p>
+        </div>
       }
     </div>
-  <!--</ng-container>-->
-  <!--<ng-container *ngIf="!filteredTracks.length && input.value.length">
-  <app-no-results></app-no-results>
-</ng-container>-->
-} @else {
-      <div class="no-liked-tracks">
-        <mat-icon>favorite</mat-icon>
-        <p>Start by tapping the heart icon on your favorite songs to create your personal playlist.</p>
-      </div>
-}
 </div>
 } @else {
   <app-loading></app-loading>
