--- a/src/app/user/liked/liked.component.scss
+++ b/src/app/user/liked/liked.component.scss
@@ -1,5 +1,51 @@
 .liked{
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background: var(--black);
+  .top{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: flex-end;
+    background: linear-gradient(180deg, var(--liked), transparent 100%);
+    padding: 20px;
+    .image{
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.53);
+      width: 200px;
+      height: 200px;
+      border-radius: 10px;
+      background: var(--gradient-45);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      mat-icon{
+        font-size: 50px;
+        width: 50px;
+        height: 50px;
+      }
+    }
+    .info{
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      p{
+
+      }
+      h2{
+        font-size: 70px;
+      }
+      .details{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 5px;
+      }
+    }
+  }
+  .bottom{
+    padding: 20px;
+  }
   input[type=text]{
     margin: 15px 0;
     width: 500px;
