--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,7 +168,7 @@ mat-dialog-container{
   --lightest: #f8f8f8;
   --light-black: #1f1f1f;
   --secondary-black: #101010;
-  --profile: linear-gradient(#2d2d2d, #000000);
+  --profile: linear-gradient(#532472, #000000);
   --gray: #383838;
   --success: #4FBF26;
   --failed: #fa1a1a;
