--- a/src/app/user/profile/profile.component.scss
+++ b/src/app/user/profile/profile.component.scss
@@ -20,10 +20,19 @@
     height: 300px;
     background: var(--profile);
     .left{
-      img{
+      .profile-image{
         width: 250px;
+        height: 250px;
+        clip-path: circle();
         border-radius: 50%;
-        box-shadow: 0 8px 24px rgba(0,0,0,.5);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        img{
+          height: auto;
+          width: 100%;
+          box-shadow: 0 8px 24px rgba(0,0,0,.5);
+        }
       }
       .no-profile-image{
         border-radius: 50%;
