--- a/src/app/playlists/playlist-card/playlist-card.component.scss
+++ b/src/app/playlists/playlist-card/playlist-card.component.scss
@@ -16,6 +16,7 @@
     }
   }
   .image{
+    overflow: hidden;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -36,8 +37,8 @@
       height: auto;
     }
     .cover{
-      width: 100%;
-      height: auto;
+      width: auto;
+      height: 100%;
       border-radius: 5px;
     }
   }
