security measures for token validation from api

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <div class="fullwidth">
-    <h1>Welcome back, {{user.first_name}}</h1>
+    <h1>Welcome back, {{user!.first_name}}</h1>
   </div>
   <div class="full-width">
     <div class="spinners">
