--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -22,7 +22,7 @@
     @for (track of tracks; track track.id; let index = $index;) {
       @defer(on viewport){
       <tr cdkDrag (cdkDragDropped)="onDragDropped($event)" (cdkDragStarted)="onDragStarted($event)" class="item"
-          [ngClass]="{'selected' : selectedTracks.has(index), 'disabled' : track.explicit && !_userService.settings().explicit}" (click)="selectTrack($event, index,track)"
+          [ngClass]="{'selected' : selectedTracks.has(index), 'disabled' : _userService.userLoaded() && track.explicit && !_userService.settings().explicit}" (click)="selectTrack($event, index,track)"
           (contextmenu)="openMenuOnRightClick($event, track)" (dblclick)="playAllFromIndex(tracks, index, from)">
         @if (selectedTracks.size > 0) {
           <p *cdkDragPreview class="preview">{{selectedTracks.size}} tracks selected</p>
@@ -46,19 +46,25 @@
           </button>
         }
       } @else {
-        @if(!track.explicit) {
-          <button class="play" (click)="playAllFromIndex(tracks, index, from)">
+        @if((this._userService.user$ | async) == null){
+          <button class="play" (click)="playAllFromIndexWithNoUser(tracks, index, from)">
             <img src="assets/icons-svg/play.svg" />
           </button>
-        } @else if (this._userService.settings().explicit && track.explicit) {
-          <button class="play" (click)="playAllFromIndex(tracks, index, from)">
-            <img src="assets/icons-svg/play.svg" />
-          </button>
-        }
-        @else if (!this._userService.settings().explicit && track.explicit){
+        } @else {
+          @if(!track.explicit) {
+            <button class="play" (click)="playAllFromIndex(tracks, index, from)">
+              <img src="assets/icons-svg/play.svg" />
+            </button>
+          } @else if (this._userService.settings().explicit && track.explicit) {
+            <button class="play" (click)="playAllFromIndex(tracks, index, from)">
+              <img src="assets/icons-svg/play.svg" />
+            </button>
+          }
+          @else if (!this._userService.settings().explicit && track.explicit){
             <div class="disabled-icon">
               <mat-icon>block</mat-icon>
             </div>
+          }
         }
       }
 
@@ -132,18 +138,21 @@
 }
 <td class="time">{{track.duration | duration:true}}</td>
 <td class="like">
-  @if (!likedMap.has(track.id)) {
-    <button (click)="likeTrack(track)" class="like-icon">
-      <img src="assets/icons-svg/heart.svg" alt="heart, icon" width="18" height="18">
-    </button>
-  }
-  @if (likedMap.has(track.id)) {
-    <button (click)="removeFromLiked(track.id)">
-      <img src="assets/icons-svg/heart-filled.svg" alt="heart, icon" width="18" height="18">
-    </button>
+  @if (_userService.userLoaded()){
+    @if (!likedMap.has(track.id)) {
+      <button (click)="likeTrack(track)" class="like-icon">
+        <img src="assets/icons-svg/heart.svg" alt="heart, icon" width="18" height="18">
+      </button>
+    }
+    @if (likedMap.has(track.id)) {
+      <button (click)="removeFromLiked(track.id)">
+        <img src="assets/icons-svg/heart-filled.svg" alt="heart, icon" width="18" height="18">
+      </button>
+    }
   }
 </td>
 <td class="more">
+
   <button style="visibility: hidden; position: fixed;" [style.left]="menuTopLeftPosition.x"
   [style.top]="menuTopLeftPosition.y" [matMenuTriggerFor]="contextMenu"></button>
   <button matRipple (click)="openMenuOnLeftClick($event, track)">
@@ -155,28 +164,33 @@
         <mat-icon class="custom-icon-color">playlist_add</mat-icon>
         <span>Add to queue</span>
       </button>
-      <button mat-menu-item [matMenuTriggerFor]="playlist" [disabled]="playlists.length === 0">
-        <mat-icon class="custom-icon-color">add</mat-icon>
-        <span>Add to playlist</span>
-      </button>
-      @if (from.url.includes('playlists/')) {
-        <button mat-menu-item (click)="removeFromPlaylist(selectedTrack, from)">
-          <mat-icon>remove_circle_outline</mat-icon>
-          <span>Remove from playlist</span>
+      @if (_userService.userLoaded()) {
+        <button mat-menu-item [matMenuTriggerFor]="playlist" [disabled]="playlists.length === 0">
+          <mat-icon class="custom-icon-color">add</mat-icon>
+          <span>Add to playlist</span>
         </button>
+        @if (from.url.includes('playlists/')) {
+          <button mat-menu-item (click)="removeFromPlaylist(selectedTrack, from)">
+            <mat-icon>remove_circle_outline</mat-icon>
+            <span>Remove from playlist</span>
+          </button>
+        }
+        @if (!likedMap.has(selectedTrack.id)) {
+          <button mat-menu-item (click)="likeTrack(selectedTrack)">
+            <mat-icon class="custom-icon-color">favorite_outline</mat-icon>
+            <span>Add to My Collection</span>
+          </button>
+        }
+        @if (likedMap.has(selectedTrack.id)) {
+          <button mat-menu-item (click)="removeFromLiked(selectedTrack.id)">
+            <mat-icon class="custom-icon-color">favorite</mat-icon>
+            <span>Remove from My Collection</span>
+          </button>
+        }
       }
-      @if (!likedMap.has(selectedTrack.id)) {
-        <button mat-menu-item (click)="likeTrack(selectedTrack)">
-          <mat-icon class="custom-icon-color">favorite_outline</mat-icon>
-          <span>Add to My Collection</span>
-        </button>
-      }
-      @if (likedMap.has(selectedTrack.id)) {
-        <button mat-menu-item (click)="removeFromLiked(selectedTrack.id)">
-          <mat-icon class="custom-icon-color">favorite</mat-icon>
-          <span>Remove from My Collection</span>
-        </button>
-      }
+
+
+
       <mat-divider></mat-divider>
       <button mat-menu-item routerLink="/artists/{{selectedTrack.owner.id}}"
         [matMenuTriggerFor]="contextArtists">
