is owner of the playlist pipe check

--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -169,7 +169,7 @@
           <mat-icon class="custom-icon-color">add</mat-icon>
           <span>Add to playlist</span>
         </button>
-        @if (from.url.includes('playlists/')) {
+        @if (from.url.includes('playlists/') && (_userService.playlists$ | async) | isPlaylistOwner:from) {
           <button mat-menu-item (click)="removeFromPlaylist(selectedTrack, from)">
             <mat-icon>remove_circle_outline</mat-icon>
             <span>Remove from playlist</span>
