added loader to init page and login/logout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,6 @@
 <!--@if(loaderService.show()) {-->
 <!--  <app-loader></app-loader>-->
 <!--}-->
+@if(loaderService.show()){
+  <app-loader></app-loader>
+}
