--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -48,7 +48,24 @@
 
   </div>
   <div class="info">
-    <h1>Welcome to Treble!</h1>
-    <p>Create your account below to unlock unlimited access to your favorite tunes anytime, anywhere.</p>
+    <h2>Create your account below to unlock unlimited access to your favorite tunes anytime, anywhere.</h2>
+    <div class="description">
+      <div class="text-info">
+        <p class="main">	<mat-icon>person_outline</mat-icon> Personalized Recommendations</p>
+        <p>Receive music recommendations tailored to your taste.</p>
+      </div>
+      <div class="text-info">
+        <p class="main"> 	<mat-icon>queue_music</mat-icon> Create Playlists</p>
+        <p>Save your favorite tracks and create custom playlists for any mood or occasion.</p>
+      </div>
+      <div class="text-info">
+        <p class="main"> <mat-icon>search</mat-icon> Discover New Music</p>
+        <p>Explore a vast library of songs and discover new artists and genres.</p>
+      </div>
+      <div class="text-info">
+        <p class="main"><mat-icon>music_note</mat-icon> Ad-Free Listening</p>
+        <p>Enjoy uninterrupted music streaming without ads with our premium subscription.</p>
+      </div>
+    </div>
   </div>
 </div>
