--- a/src/app/albums/album-detail/album-detail.component.html
+++ b/src/app/albums/album-detail/album-detail.component.html
@@ -20,7 +20,11 @@
           <h1>{{album.name}}</h1>
 
         </div>
-        <p>{{album.tracks_count}} tracks</p>
+        <div class="with-divider">
+          <p>{{album.tracks_count}} tracks</p>
+          <app-divider></app-divider>
+          <p>{{totalDuration() | formatDuration}}</p>
+        </div>
         <p>{{album.release_year}}</p>
         <div class="artist">
           <a routerLink="/artists/{{album.artist.id}}">
